--- a/core/templates/expense_confirm_delete.html
+++ b/core/templates/expense_confirm_delete.html
@@ -16,7 +16,7 @@
               Are you sure you want to delete the expense under 
               <strong>{{ expense.category|capfirst }}</strong> 
               dated <strong>{{ expense.date }}</strong> 
-              with amount <strong>${{ expense.amount }}</strong>?
+              with amount <strong>Tsh.{{ expense.amount }}</strong>?
             </p>
             <p class="mb-0">This action cannot be undone.</p>
           </div>
