--- a/core/templates/income_confirm_delete.html
+++ b/core/templates/income_confirm_delete.html
@@ -14,7 +14,7 @@
             Are you sure you want to permanently delete the income record from
             <strong class="text-primary">{{ income.source }}</strong> dated
             <strong>{{ income.date }}</strong> amounting to
-            <strong class="text-danger">${{ income.amount }}</strong>?
+            <strong class="text-danger">Tsh.{{ income.amount }}</strong>?
           </p>
 
           <form method="post" class="d-flex justify-content-end gap-2">
