Categories(love, business, debt, and beauty added

--- a/core/templates/dashboard.html
+++ b/core/templates/dashboard.html
@@ -152,7 +152,7 @@
       datasets: [{
         label: 'Expense Share',
         data: expenseData,
-        backgroundColor: ['#0dcaf0', '#ffc107', '#fd7e14', '#dc3545', '#20c997', '#6f42c1', '#198754']
+        backgroundColor: ['#0dcaf0', '#ffc107', '#fd7e14', '#dc3545', '#20c997', '#6f42c1','#FF5733','#9B59B6','#34495E','#33FF57', '#198754']
       }]
     },
     options: {
